# trace-memcheck

./: .gitignore  CMakeLists.txt
src/: #block.cc#  *compilation*  .#xsub.sh  .gitignore  BRANCHES  BUG  CMakeLists.txt  DEBUG  LOG  NOTES  OPTIM  TODO  addr-range.cc  addr-range.hh  bkpt.cc  bkpt.hh  bkpts.sh  block-fwd.hh  block-pool-fwd.hh  block-pool.cc  block-pool.hh  block-term.cc  block-term.hh  block-term.hh.bak  block.cc  block.hh  branches.cc  branches.hh  call.asm  chk.awk  chksum.asm  cksum.cc  cksum.hh  conditional-iterator-main.cc  config.cc  config.hh  debug.h  decoder.cc  decoder.hh  diff.sh  (+98 more)
src/bak/: memcheck.cc  memcheck.hh  syscall-args.hh  syscall-check.cc  syscall-check.hh  tracker.cc  tracker.hh
src/dbi/: CMakeLists.txt  NOTES  TODO  block-pool.cc  block-pool.hh  block-term.cc  block-term.hh  block.cc  block.hh  config.cc  config.hh  decoder.cc  decoder.hh  inst.cc  inst.hh  jcc_iclass.inc  jcc_iform.inc  patch.cc  patch.hh  ptr-pool.hh  regs.cc  regs.hh  romcache.cc  romcache.hh  rsb.cc  rsb.hh  settings.hh  status.cc  status.hh  syscall-args.hh  syscall.cc  syscall.hh  tmp-mem.hh  tracee.cc  tracee.hh  tracees.hh  types.hh  usermem.cc  usermem.hh  util.hh
src/memcheck/: .gitignore  CMakeLists.txt  NOTES  TODO  addr-range.cc  addr-range.hh  cksum.hh  config.cc  config.hh  execmem.hh  flags.hh  inst-check.cc  inst-check.hh  libc.c  log.cc  log.hh  main.cc  maps.cc  maps.hh  memcheck-types.hh  memcheck-vars.cc  memcheck-vars.hh  memcheck.cc  memcheck.hh  pageset.cc  pageset.hh  settings.hh  snapshot.cc  snapshot.hh  state.cc  state.hh  syscall-args.hh  syscall-check.cc  syscall-check.hh  syscall-check2.cc  syscall-check2.hh  syscall.cc  syscall.hh  syscaller.hh  thdmap.hh  (+8 more)
src/scripts/: #memcheck.out#  diff-trace.sh  memcheck.out  ss.out
src/tests/: .__afs3AD8  .__afsA6B9  a.out  asm  asm.c  fib  fib.c  hlt  hlt.c  print  print.c  rec  rec.c  rec.s  simple
tests/: .gitignore  CMakeLists.txt  bad-fd-read.c  bad-if.c  bad-return-value.c  fib.env  fork.c  fork.env  ls-a.env  ls-color.env  ls-l.env  myls.c  myls.env  rsp  rsp.asm  run.sh  signal  signal.asm  signal.c  strlen.c  tst  tst.asm
tests/memcheck/: CMakeLists.txt  README  bad-fd-read.c  bad-fd-read.env  bad-if.env  bad-return-value.env  fib.c  ls.env  myls.c  nz.c  strlen.env
